--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,14 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
+a {
+    -webkit-transition: all 500ms ease;
+    -moz-transition: all 500ms ease;
+    -ms-transition: all 500ms ease;
+    -o-transition: all 500ms ease;
+    transition: all 500ms ease;
+}
+
 a:hover {
     -webkit-transition: all 500ms ease;
     -moz-transition: all 500ms ease;
@@ -35,6 +43,11 @@ a:hover {
     border-radius: 0;
     color: #fff;
     background-color: rgba(0,0,0,0.4);
+    -webkit-transition: all 500ms ease;
+    -moz-transition: all 500ms ease;
+    -ms-transition: all 500ms ease;
+    -o-transition: all 500ms ease;
+    transition: all 500ms ease;
 }
 
 .btn-dark:hover,
@@ -177,8 +190,22 @@ hr.small {
 }
 
 .about span {
-    color: blue;
+    color: #00aa33;
     cursor: pointer;
+    -webkit-transition: all 500ms ease;
+    -moz-transition: all 500ms ease;
+    -ms-transition: all 500ms ease;
+    -o-transition: all 500ms ease;
+    transition: all 500ms ease;
+}
+.about span:hover {
+    color: #008800;
+    cursor: pointer;
+    -webkit-transition: all 500ms ease;
+    -moz-transition: all 500ms ease;
+    -ms-transition: all 500ms ease;
+    -o-transition: all 500ms ease;
+    transition: all 500ms ease;
 }
 
 .fa-envelope, .fa-facebook-square, .fa-github-square, 
@@ -186,6 +213,11 @@ hr.small {
 .fa-arrow-circle-left:hover, .glyphicon-chevron-up {
     color: #444;
     opacity: 0.7;
+    -webkit-transition: all 500ms ease;
+    -moz-transition: all 500ms ease;
+    -ms-transition: all 500ms ease;
+    -o-transition: all 500ms ease;
+    transition: all 500ms ease;
 }
 
 .fa-bars, .fa-arrow-circle-left, .fa-envelope:hover, 
@@ -210,7 +242,7 @@ hr.small {
 .showprojects {
     display: table;
     width: 100%;
-    height: 400px;
+    height: 300px;
     color: #fff;
     position: relative;
     -webkit-background-size: cover;
@@ -232,7 +264,7 @@ hr.small {
 .moreaboutme {
     display: table;
     width: 100%;
-    height: 400px;
+    height: 300px;
     color: #fff;
     position: relative;
     -webkit-background-size: cover;
@@ -297,7 +329,7 @@ hr.small {
 }
 
 .bg-primary {
-    background-color: #999;
+    background-color: #797979
 }
 
 footer {
