--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@ body {
 
 body {
     font-family: 'Open Sans', sans-serif;
+    background-image: url("../img/wallpaper.png")
 }
 
 a {
@@ -187,6 +188,7 @@ hr.small {
 
 .about h3 {
     line-height: 200%;
+    font-weight: 100;
 }
 
 .about span {
@@ -210,7 +212,8 @@ hr.small {
 
 .fa-envelope, .fa-facebook-square, .fa-github-square, 
 .fa-linkedin-square, .fa-bars:hover,
-.fa-arrow-circle-left:hover, .glyphicon-chevron-up {
+.fa-arrow-circle-left:hover, .glyphicon-chevron-up,
+.fa-chevron-down {
     color: #444;
     opacity: 0.7;
     -webkit-transition: all 500ms ease;
@@ -222,7 +225,8 @@ hr.small {
 
 .fa-bars, .fa-arrow-circle-left, .fa-envelope:hover, 
 .fa-facebook-square:hover, .fa-github-square:hover, 
-.fa-linkedin-square:hover, .glyphicon-chevron-up:hover {
+.fa-linkedin-square:hover, .glyphicon-chevron-up:hover,
+.fa-chevron-down:hover {
     color: black;
     -webkit-transition: all 500ms ease;
     -moz-transition: all 500ms ease;
@@ -239,10 +243,16 @@ hr.small {
     padding: 50px 0;
 }
 
+.projects h2, .projects h4, .morecontent h2, .morecontent h4,
+.contact h2, .contact h4, .contact h3, .resume h3, .resume h2, 
+.resume h4, footer p{
+    font-weight: 100;
+}
+
 .showprojects {
     display: table;
     width: 100%;
-    height: 300px;
+    height: 333px;
     color: #fff;
     position: relative;
     -webkit-background-size: cover;
@@ -264,7 +274,7 @@ hr.small {
 .moreaboutme {
     display: table;
     width: 100%;
-    height: 300px;
+    height: 333px;
     color: #fff;
     position: relative;
     -webkit-background-size: cover;
@@ -337,7 +347,7 @@ footer {
 }
 
 img {
-    border:2px solid #000;
+    border:1.5px solid #333;
     border-radius: 5px;
 }
 
@@ -484,5 +494,22 @@ img {
     }
 }
 
+.showprojects h1 {
+    font-weight: 100;
+    font-size: 65px;
+}
 
+.moreaboutme h1 {
+    font-weight: 100;
+    font-size: 65px;
+}
+
+.header h1 {
+    font-weight: 100;
+    font-size: 75px;
+}
+
+.header h2 {
+    font-weight: 100;
+}
 
