--- a/css/main.css
+++ b/css/main.css
@@ -91,7 +91,7 @@ hr.small {
     height: 100%;
     margin-left: -250px;
     overflow-y: auto;
-    background: #222;
+    background-color: rgba(0,0,0,1);
     -webkit-transition: all 0.4s ease 0s;
     -moz-transition: all 0.4s ease 0s;
     -ms-transition: all 0.4s ease 0s;
@@ -110,7 +110,8 @@ hr.small {
 
 .sidebar-nav li {
     text-indent: 20px;
-    line-height: 40px;
+    line-height: 3em;
+    font-size: 1.5em;
 }
 
 .sidebar-nav li a {
@@ -121,8 +122,8 @@ hr.small {
 
 .sidebar-nav li a:hover {
     text-decoration: none;
-    color: #fff;
-    background: rgba(255,255,255,0.2);
+    color: #000;
+    background: rgba(255,255,255,0.75);
 }
 
 .sidebar-nav li a:active,
@@ -131,9 +132,9 @@ hr.small {
 }
 
 .sidebar-nav > .sidebar-brand {
-    height: 55px;
-    font-size: 18px;
-    line-height: 55px;
+    height: 75px;
+    font-size: 25px;
+    line-height: 75px;
 }
 
 .sidebar-nav > .sidebar-brand a {
@@ -211,8 +212,7 @@ hr.small {
 }
 
 .fa-envelope, .fa-facebook-square, .fa-github-square, 
-.fa-linkedin-square, .fa-bars:hover,
-.fa-arrow-circle-left:hover, .glyphicon-chevron-up,
+.fa-linkedin-square, .fa-bars:hover, .glyphicon-chevron-up,
 .fa-chevron-down {
     color: #444;
     opacity: 0.7;
@@ -222,7 +222,15 @@ hr.small {
     -o-transition: all 500ms ease;
     transition: all 500ms ease;
 }
-
+.fa-arrow-circle-left:hover {
+    color: #fff;
+    opacity: 0.7;
+    -webkit-transition: all 500ms ease;
+    -moz-transition: all 500ms ease;
+    -ms-transition: all 500ms ease;
+    -o-transition: all 500ms ease;
+    transition: all 500ms ease;
+}
 .fa-bars, .fa-arrow-circle-left, .fa-envelope:hover, 
 .fa-facebook-square:hover, .fa-github-square:hover, 
 .fa-linkedin-square:hover, .glyphicon-chevron-up:hover,
@@ -236,7 +244,7 @@ hr.small {
 }
 
 .fa-arrow-circle-left {
-    color: #444;
+    color: #999;
 }
 
 .projects {
@@ -271,7 +279,7 @@ hr.small {
     line-height: 150%;
 }
 
-.moreaboutme {
+.moreaboutme, .morecontact {
     display: table;
     width: 100%;
     height: 333px;
@@ -283,7 +291,7 @@ hr.small {
     -o-background-size: cover;
 }
 
-.moreaboutme h1 {
+.moreaboutme h1, .morecontact h1 {
     text-shadow: 5px 5px 5px #000000;
     position: relative;
     z-index: 1;
@@ -518,7 +526,7 @@ img {
     font-size: 65px;
 }
 
-.moreaboutme h1 {
+.moreaboutme h1, .morecontact h1 {
     font-weight: 100;
     font-size: 65px;
 }
